--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language : node_js
 node_js :
  - stable
 install:
- - npm install
+ - npm run install
 script:
- - npm test
+ - npm run test
+
+# Send coverage data to Coveralls
+after_script: "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
