--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "test": "mocha --reporter spec",
+    "lint": "eslint ./lib/src --fix",
+    "build": "tsc && node dist/src/index.js",
+    "test": "mocha -r ts-node/register lib/test/**/*.ts --reporter spec",
     "cover": "istanbul cover node_modules/mocha/bin/_mocha test/*.js - - -R spec"
   },
   "repository": {
@@ -21,10 +22,23 @@
   },
   "homepage": "https://github.com/H3nSte1n/dev_utils#readme",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.8.0",
+    "@typescript-eslint/parser": "^3.8.0",
     "chai": "^4.2.0",
     "coveralls": "^3.1.0",
+    "eslint": "^7.6.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
     "istanbul": "^0.4.5",
     "mocha": "^8.1.1",
     "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "@types/chai": "^4.2.12",
+    "@types/mocha": "^8.0.1",
+    "@types/node": "^14.0.27",
+    "@types/sinon": "^9.0.4",
+    "sinon": "^9.0.2",
+    "ts-node": "^8.10.2"
   }
 }
